--- a/02/style.css
+++ b/02/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #38D0F2;
+    background-color: #D4D4D2;
     display: flex;
     justify-content: center;
 }
@@ -49,7 +49,7 @@ button {
     padding: 50px 10px;
     background-color: #303B40;
     width: 320px;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 50px;
 }
 
